# Rutile

./: .SRCINFO  .mega-linter.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  GUIDELINE.md  LICENSE  PKGBUILD  README.md  SECURITY.md  deny.toml  release-plz.toml  rutile.spec
.github/: dependabot.yml
.github/actions/notify-failure/: action.yml
.github/actions/resolve-release-tag/: action.yml
.github/actions/smoke-launch/: action.yml
.github/workflows/: aur-publish.yml  ci.yml  commitlint.yml  dependabot-auto-merge.yml  release-plz.yml  release.yml  scorecard.yml  smoke-test.yml
docs/: ROADMAP.md
resources/: catppuccin-mocha.css  rutile.desktop
scripts/: update-pkgbuild.sh
src/: app.rs  context_menu.rs  keymap.rs  lib.rs  main.rs  pane_header.rs  window.rs
src/layout/: mod.rs  pane_view.rs  split_tree.rs
src/preferences/: config.rs  mod.rs  window.rs
src/session/: mod.rs  session_view.rs  sidebar.rs
src/terminal/: broadcast.rs  mod.rs  widget.rs
tests/: broadcast.rs  split_tree.rs
