[package]
# NOT "rutile": an unrelated crate is already published on crates.io under
# that exact name (confirmed the hard way — release-plz's version
# comparison logic queries crates.io regardless of `publish = false`
# below, got confused comparing our version against that unrelated
# package's, and silently stopped proposing new version bumps). The
# `[[bin]]` section below keeps the actual executable named "rutile"
# everywhere it matters (rutile.spec, PKGBUILD, the .deb assets, the
# .desktop file's Exec= line) — only the crates.io-facing package
# identity changes.
name = "rutile-terminal"
version = "0.2.1"
edition = "2024"
rust-version = "1.92"
description = "GNOME-native terminal emulator with recursive split tiling and synchronized input, in Rust/GTK4"
license = "MIT"
repository = "https://github.com/yatoub/Rutile"

[lib]
name = "rutile"
path = "src/lib.rs"

[[bin]]
name = "rutile"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11.4", features = ["v4_14"] }
libadwaita = { version = "0.9.2", features = ["v1_4"] }
serde = { version = "1.0.229", features = ["derive"] }
toml = "1.1.3"
vte4 = { version = "0.10.0", features = ["v0_70"] }

[package.metadata.deb]
name = "rutile"
maintainer = "yatoub <yatoub@users.noreply.github.com>"
copyright = "2026 yatoub"
license-file = ["LICENSE", "0"]
extended-description = """\
Rutile is a from-scratch Rust/GTK4 rewrite of Tilix, aiming for functional \
parity on its core value: recursive split tiling, synchronized input \
across panes, independent multi-session support, and a Catppuccin theme."""
depends = "libgtk-4-1, libadwaita-1-0, libvte-2.91-gtk4-0"
section = "x11"
priority = "optional"
assets = [
    ["target/release/rutile", "usr/bin/rutile", "755"],
    ["resources/rutile.desktop", "usr/share/applications/rutile.desktop", "644"],
    ["README.md", "usr/share/doc/rutile/README.md", "644"],
]
